--- a/backend/idea.ipynb
+++ b/backend/idea.ipynb
@@ -2,18 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "70223fe1",
    "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
-    "from google.genai import types"
+    "from google.genai import types\n",
+    "import os"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "0cb8610e",
    "metadata": {},
    "outputs": [],
@@ -35,7 +36,41 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "891df26c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "image = \"/Volumes/Crucial_X6/GCP_hackathon/GAID/backend/gAIde/info_image_agent/image.png\"\n",
+    "assert os.path.exists(image)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 6,
+   "id": "d7eb39b4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "parts=[Part(\n",
+      "  text='{\"image\": \"/Volumes/Crucial_X6/GCP_hackathon/GAID/backend/gAIde/info_image_agent/image.png\", \"profile\": {\"interests\": [\"engineering_cars\", \"history\"], \"mobility\": \"standard\", \"locale\": \"en-US\"}}'\n",
+      ")] role='user'\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Send ONLY structured inputs; the agent decides to call the tool.\n",
+    "payload = json.dumps({\"image\": image, \"profile\": profile}, ensure_ascii=False)\n",
+    "content = types.Content(role=\"user\", parts=[types.Part(text=payload)])\n",
+    "print(content)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "e7211e5d",
    "metadata": {},
    "outputs": [
